# Xsens_Linux

./: OPERATION_GUIDE.md  README.md  TECHNICAL_AUDIT.md  bt-reset.sh  launch_gui.sh  patch_gatt_error.py  pyproject.toml
tests/: test_16.py  test_adapters.py  test_connections.py  test_recording_logs.py  test_sync.py  test_utc.py
xdot_export/: D4-22-CD-00-42-7D_file01.csv  D4-22-CD-00-42-CD_file01.csv  D4-22-CD-00-49-C6_file01.csv  D4-22-CD-00-49-C7_file01.csv  D4-22-CD-00-49-C7_file01.json  D4-22-CD-00-49-C8_file01.csv  D4-22-CD-00-4A-9C_file01.csv  D4-22-CD-00-4A-9C_file01.json  D4-22-CD-00-4B-44_file01.csv  D4-22-CD-00-4B-44_file01.json  D4-22-CD-00-4B-46_file01.csv  D4-22-CD-00-50-4C_file01.csv  D4-22-CD-00-50-4C_file01.json  D4-22-CD-00-50-52_file01.csv  D4-22-CD-00-50-52_file01.json  D4-22-CD-00-53-50_file01.csv  D4-22-CD-00-53-50_file01.json  D4-22-CD-00-53-5C_file01.csv  D4-22-CD-00-53-5C_file01.json  D4-22-CD-00-53-67_file01.csv  D4-22-CD-00-53-67_file01.json  D4-22-CD-00-53-6A_file01.csv  D4-22-CD-00-53-6A_file01.json  D4-22-CD-00-53-6B_file01.csv  D4-22-CD-00-53-6B_file01.json  D4-22-CD-00-53-E9_file01.csv  D4-22-CD-00-53-E9_file01.json
xdot_manager/: __init__.py  adapters.py  analysis.py  campaign.py  export.py  gui.py  main.py  recording.py  scanner.py  sensor.py  sync.py  utc.py
xdot_manager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
xdot_sync_test/: D4-22-CD-00-42-CD_file01.csv  D4-22-CD-00-49-C6_file01.csv  D4-22-CD-00-49-C7_file01.csv  D4-22-CD-00-49-C8_file01.csv  D4-22-CD-00-49-C8_file02.csv  (+11 more)
(+3 files in other folders)
